--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 	<div class="superinfo-bg">
 		<div class="superinfo">
 			<p>Seg / Sex - 08:00 às 18:00</p>
-			<a href="tel:+552199999999">+55 21 9999-9999</a>
-			<p>Av. Ali Perto, 330, Botafogo - RJ</p>
+			<a href="tel:+552199999999">+55 79 99959-1921</a>
+			<p>Rua Domingos Batalha de Gois, 480, Tobias Barreto - SE</p>
 		</div>
 	</div>
 	
@@ -138,6 +138,7 @@
 			<h2>Sustentável</h2>
 			<p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão </p>
 		</div>
+		
 	</section>
 	
 	<section class="newsletter">
